syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package function;

service FunctionService {
  rpc FunctionInvoke(FunctionInvokeRequest)
      returns (stream FunctionInvokeResponse) {}
  rpc FunctionGetArgs(FunctionGetArgsRequest)
      returns (FunctionGetArgsResponse) {}
  rpc FunctionSetResult(FunctionSetResultRequest)
      returns (FunctionSetResultResponse) {}
}

message FunctionInvokeRequest {
  string object_id = 1;
  string image_id = 2;
  string stub_id = 3;
  bytes args = 4;
  string handler = 5;
  string python_version = 6;
  int64 cpu = 7;
  int64 memory = 8;
  string gpu = 9;
}

message FunctionInvokeResponse {
  string output = 1;
  bool done = 2;
  uint32 exit_code = 3;
  bytes result = 4;
}

message FunctionGetArgsRequest { string task_id = 1; }
message FunctionGetArgsResponse {
  bool ok = 1;
  bytes args = 2;
}

message FunctionSetResultRequest {
  string task_id = 1;
  bytes result = 2;
}

message FunctionSetResultResponse { bool ok = 1; }
